--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,7 @@ body {
   color: #212121;
   line-height: 1.5;
 }
-.action {
+.form-submit {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -82,7 +82,7 @@ body {
   justify-content: center;
   list-style: none;
   margin: 0 auto;
-  /* width: calc((100% - 24px * 2) / 3); */
+  width: calc((100% - 24px * 2) / 3);
 }
 
 .loading-text {
