--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -74,6 +74,7 @@ body {
   max-width: 1440px;
   height: auto;
 }
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -82,10 +83,52 @@ body {
   justify-content: center;
   list-style: none;
   margin: 0 auto;
-  width: calc((100% - 24px * 2) / 3);
+}
+.gallery-item {
+  /* position: relative; */
+  flex: 0 0 calc(33.33% - 24px);
+  list-style: none;
+}
+.gallery-link {
+  text-decoration: none;
+
+  display: flex;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  height: 100%;
+}
+.gallery-link:hover {
+  cursor: zoom-in;
+}
+.gallery-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.gallery-image:hover {
+  transform: scale(1.03);
+}
+.loader.hidden {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #002aff;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
-.loading-text {
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* .loading-text {
   display: flex;
   color: #2e2f42;
   font-family: Montserrat;
@@ -94,4 +137,4 @@ body {
   letter-spacing: 0.64px;
   flex-direction: column;
   align-items: center;
-}
+} */
